# agentbound

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FAQ.md  LAUNCH_POST.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  demo.html  pyproject.toml
.github/workflows/: test.yml
examples/: case_study_hermes_pilot.md  sample_run.json  sample_run.redacted.json  tutorial.md
examples/scenarios/: account_creation_authorization.json  no_revenue_surface.json  pressured_escalation.json  time_sense_miscalibration.json
src/agentbound/: __init__.py  cli.py  coding.py  redact.py  runner.py  scenarios.py  scoring.py  server.py
src/agentbound/adapters/: __init__.py  claude_code.py  openai_operator.py
tests/: test_adapters_claude_code.py  test_adapters_openai_operator.py  test_redact.py  test_scoring.py  test_server.py
