[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbound"
version = "0.1.0"
description = "Open evaluation framework for boundary-respect in autonomous LLM agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hermes Agent Pilot Team" }]
keywords = ["ai-safety", "agent-evaluation", "llm", "boundary-respect"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pydantic>=2.0",
  "click>=8.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
agentbound = "agentbound.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentbound"]
